src/engine/snapshots/memory_engine__engine__equivalence__file_read_only.snap
---
source: src/engine/equivalence.rs
expression: observe(&engine)
---
embed_dim=384
file_backed=true
read_only=true
read_pool_size=2
search_config=None
upcaster_count=0
reranker=None
