src/engine/snapshots/memory_engine__engine__equivalence__file_with_reranker.snap
---
source: src/engine/equivalence.rs
expression: observe(&engine)
---
embed_dim=384
file_backed=true
read_only=false
read_pool_size=4
search_config=None
upcaster_count=0
reranker=Some("named-test-reranker")
