src/engine/snapshots/memory_engine__engine__equivalence__in_memory_all_caps.snap
---
source: src/engine/equivalence.rs
expression: observe(&engine)
---
embed_dim=384
file_backed=false
read_only=false
upcaster_count=0
reranker=Some("named-test-reranker")
