src/engine/snapshots/memory_engine__engine__equivalence__in_memory_with_search_config.snap
---
source: src/engine/equivalence.rs
expression: observe(&engine)
---
embed_dim=384
file_backed=false
read_only=false
upcaster_count=0
reranker=None
