src/engine/snapshots/memory_engine__engine__equivalence__in_memory_with_upcaster.snap
---
source: src/engine/equivalence.rs
expression: observe(&engine)
---
embed_dim=384
file_backed=false
read_only=false
read_pool_size=0
search_config=None
upcaster_count=1
reranker=None
